fix(core/cluster): Vertically align icons and make them the same size (#4764)
My OCD was hurting

--- a/app/scripts/modules/core/src/cluster/rollups.less
+++ b/app/scripts/modules/core/src/cluster/rollups.less
@@ -330,6 +330,15 @@ running-tasks-tag {
   }
 }
 
+.server-group-manager-tag {
+  .badge-counter {
+    margin-top: -5px;
+    height: 19px;
+    .fa-server {
+      padding: 1px 0;
+    }
+  }
+}
 
 .rollup-details {
   background-color: var(--color-alabaster);
